fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ li{
 }
 #pics>div:first-child{
     grid-area: photo-one;
-    height: 300px;
+    height: 313px;
 }
 
 
